--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,6 +32,14 @@
       font-family: 'Roboto Slab', serif;
     }
 
+    .recipe_img > img {
+        width:70%;
+    }
+
+    .recipe_instructions {
+        font-size:10px;
+    }
+
     </style>
 </head>
 <body>
