--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -6,20 +6,103 @@
 
 <div class="col-md-7">
 
-    <p>{{ current_user.first_name }} {{ current_user.last_name }}</p>
+    <h4>{{ current_user.first_name }} {{ current_user.last_name }}'s Profile</h4>
 
     <div class="row">
         <form action="/register" method="post">
           <div class="col-xs-6">
             <div class="form-group">
               <label>Age</label>
-              <input type="text" class="form-control" placeholder="Age" name="age" />
+              <select class="form-control" name="age">
+                    <option value="013">13</option>
+                    <option value="014">14</option>
+                    <option value="015">15</option>
+                    <option value="016">16</option>
+                    <option value="017">17</option>
+                    <option value="018">18</option>
+                    <option value="019">19</option>
+                    <option value="020">20</option>
+                    <option value="021">21</option>
+                    <option value="022">22</option>
+                    <option value="023">23</option>
+                    <option value="024">24</option>
+                    <option value="025">25</option>
+                    <option value="026">26</option>
+                    <option value="027">27</option>
+                    <option value="028">28</option>
+                    <option value="029">29</option>
+                    <option value="030">30</option>
+                    <option value="031">31</option>
+                    <option value="032">32</option>
+                    <option value="033">33</option>
+                    <option value="034">34</option>
+                    <option value="035">35</option>
+                    <option value="036">36</option>
+                    <option value="037">37</option>
+                    <option value="038">38</option>
+                    <option value="039">39</option>
+                    <option value="040">40</option>
+                    <option value="041">41</option>
+                    <option value="042">42</option>
+                    <option value="043">43</option>
+                    <option value="044">44</option>
+                    <option value="045">45</option>
+                    <option value="046">46</option>
+                    <option value="047">47</option>
+                    <option value="048">48</option>
+                    <option value="049">49</option>
+                    <option value="050">50</option>
+                    <option value="051">51</option>
+                    <option value="052">52</option>
+                    <option value="053">53</option>
+                    <option value="054">54</option>
+                    <option value="055">55</option>
+                    <option value="056">56</option>
+                    <option value="057">57</option>
+                    <option value="058">58</option>
+                    <option value="059">59</option>
+                    <option value="050">50</option>
+                    <option value="061">61</option>
+                    <option value="062">62</option>
+                    <option value="063">63</option>
+                    <option value="064">64</option>
+                    <option value="065">65</option>
+                    <option value="066">66</option>
+                    <option value="067">67</option>
+                    <option value="068">68</option>
+                    <option value="069">69</option>
+                    <option value="070">70</option>
+                    <option value="071">71</option>
+                    <option value="072">72</option>
+                    <option value="073">73</option>
+                    <option value="074">74</option>
+                    <option value="075">75</option>
+                    <option value="076">76</option>
+                    <option value="077">77</option>
+                    <option value="078">78</option>
+                    <option value="079">79</option>
+                    <option value="080">80</option>
+                    <option value="081">81</option>
+                    <option value="082">82</option>
+                    <option value="083">83</option>
+                    <option value="084">84</option>
+                    <option value="085">85</option>
+                    <option value="086">86</option>
+                    <option value="087">87</option>
+                    <option value="088">88</option>
+                    <option value="089">89</option>
+                    <option value="090">90</option>
+              </select>
+
             </div>
           </div>
 
           <div class="col-xs-6">
             <label>Gender</label>
-            <input type="text" class="form-control" placeholder="Gender" name="gender" />
+            <select class="form-control" name="gender">
+                  <option value="F">F</option>
+                  <option value="M">M</option>
+            </select>
           </div>
 
         </div>
@@ -31,9 +114,16 @@
                 <input type="text" class="form-control" placeholder="Location" name="location" />
               </div>
 
-            </div>
+        </div>
 
-        <input type="submit" class="btn btn-success"/>
+        <hr>
+
+        <div class="row">
+            <div class="col-xs-12">
+                <input type="submit" value="Save" class="form-control btn btn-primary"/>
+            </div>
+        </div>
+
     </form>
 </div>
 
