--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -64,19 +64,22 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/">Demeter</a>
+                    <a class="navbar-brand" href="/">
+                        <img style="display: inline-block; height:24px;" src="{{ url_for('static', filename='images/demeter.png') }}" />
+                        Demeter
+                    </a>
                 </div>
 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     {% if current_user.is_authenticated %}
                     <ul class="nav navbar-nav navbar-right">
+                        <li><a href="/home">Home</a></li>
+                        <li><a href="/profile">Profile</a></li>
                         <li class="dropdown">
                             <a href="" class="dropdown-toggle" data-toggle="dropdown">
                                 <img class="img-circle profile-avatar" src="https://graph.facebook.com/{{ current_user.fb_id }}/picture">
                                 {{ current_user.first_name }} {{ current_user.last_name }} </h4><span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a href="/home">Home</a></li>
-                                <li><a href="/profile">Profile<a></li>
                                 <li><a href="/logout">Logout</a></li>
                             </ul>
                         </li>
