--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,8 +18,25 @@
 
     <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
 
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/ng-tags-input/2.0.1/ng-tags-input.min.css" />
+
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/select.min.css') }}" type='text/css'/>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+
+    <!-- AngularJS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular.js"></script>
+
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/ng-tags-input/2.0.1/ng-tags-input.min.js"></script>
+
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.0/angular-sanitize.js"></script>
+
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true&libraries=places&language=en-US"></script>
+
+    <script src="{{ url_for('static', filename='js/select.min.js') }}"></script>
+
+    <script src="{{ url_for('static', filename='js/controllers.js') }}"></script>
 
     <style>
 
@@ -49,9 +66,16 @@
         width: 15%;
     }
 
+    .tag-item, .tag-item > a {
+      background: #428bca !important;
+      color: #f8f8f8 !important;
+    }
+    input, .tag-item, .tags, .suggestion-item {
+      font-family: 'Roboto Slab', serif !important;
+    }
     </style>
 </head>
-<body>
+<body ng-app="demeter">
     <div class="container">
 
         <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
