--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -34,6 +34,8 @@
 
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true&libraries=places&language=en-US"></script>
 
+    <script src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.js"></script>
+
     <script src="{{ url_for('static', filename='js/select.min.js') }}"></script>
 
     <script src="{{ url_for('static', filename='js/controllers.js') }}"></script>
@@ -72,6 +74,10 @@
     }
     input, .tag-item, .tags, .suggestion-item {
       font-family: 'Roboto Slab', serif !important;
+    }
+
+    .location-map {
+        height:40%;
     }
     </style>
 </head>
