--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -57,6 +57,12 @@
                 <google-places location=location></google-places>
               </div>
 
+              <div class="col-xs-12">
+                  <div class="location-map" map-lazy-load="https://maps.google.com/maps/api/js">
+      <ng-map center="{[coordinates]}"></ng-map>
+    </div>
+              </div>
+
         </div>
 
         <hr>
