--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -34,7 +34,7 @@
 
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true&libraries=places&language=en-US"></script>
 
-    <script src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.js"></script>
+    <!--<script src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.js"></script>-->
 
     <script src="{{ url_for('static', filename='js/select.min.js') }}"></script>
 
