--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -133,7 +133,7 @@
                         <li class="dropdown">
                             <a href="" class="dropdown-toggle" data-toggle="dropdown">
                                 <img class="img-circle profile-avatar" src="https://graph.facebook.com/{{ current_user.fb_id }}/picture">
-                                {{ current_user.first_name }} {{ current_user.last_name }} </h4><span class="caret"></span></a>
+                                {{ current_user.name }}</h4><span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="/logout">Logout</a></li>
                             </ul>
