--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -6,7 +6,7 @@
 
 <div class="col-md-7" ng-controller="ProfileCtrl" ng-init="init('{{ current_user.id }}')">
 
-    <h4>{{ current_user.first_name }} {{ current_user.last_name }}'s Profile</h4>
+    <h4>{{ current_user.name }}'s Profile</h4>
 
     <div class="row">
         <form name="profileForm" novalidate>
