--- a/app/templates/recipe.html
+++ b/app/templates/recipe.html
@@ -26,7 +26,7 @@
 
             <div class="recipe_characteristics">
                 {% for label in recipe.labels %}
-                <i class="fa fa-check" aria-hidden="true"></i> {{ label }}
+                <i class="fa fa-check" aria-hidden="true"></i> {{ label }}<br>
                 {% endfor %}
 
                 <br>
