--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -143,6 +143,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="/home">Home</a></li>
                         <li><a href="/profile">Profile</a></li>
+                        <li><a href="/search">Search</a></li>
                         <li><a href="/analysis">Analysis</a></li>
                         <li class="dropdown">
                             <a href="" class="dropdown-toggle" data-toggle="dropdown">
