--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -77,7 +77,7 @@
 
 </div>
 
-<div class="row" ng-show="recipes.length > 0" style="padding:1%;">
+<div class="row" ng-show="showResults" style="padding:1%;">
     <div class="col-md-12">
 
         <h4>Search results - {[ recipes.length ]}</h4>
