--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -46,7 +46,7 @@
 <div class="col-md-1">
 </div>
 
-<div class="col-md-8">
+<div class="col-md-10">
 
     <div class="row">
         <div class="col-xs-12">
@@ -54,6 +54,7 @@
         </div>
     </div>
 
+    {% if recommended_recipes %}
     <div class="row">
         <div class="col-xs-12">
             <h4>People who like the same recipes as you also like:</h4><br>
@@ -103,6 +104,7 @@
             {% endfor %}
 
         </div>
+        {% endif %}
 
     {% if similar_recipes %}
     <div class="row">
@@ -183,7 +185,7 @@
 
 </div>
 
-<div class="col-md-3">
+<!--<div class="col-md-3">
     <div class="favorites" data-spy="affix">
     <h4>Most favorited recipes</h4>
     {% for recipe in random_recipes[:6] %}
@@ -203,6 +205,6 @@
     <p>{{ recipe.title }}</p>
     {% endfor %}
 </div>
-</div>
+</div>-->
 
 {% endblock content %}
